--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "develop": "parcel src/index.html"
   },
   "dependencies": {
-    "hyperapp": "^1.1.2"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
-    "cssnext": "^1.8.4",
-    "node-sass": "^4.7.2",
-    "parcel-bundler": "^1.6.1",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-modules": "^1.1.0"
+    "babel-preset-react": "^6.24.1",
+    "parcel-bundler": "^1.6.1"
   }
 }
