--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "rebass": "^2.0.0-0",
+    "styled-components": "^3.1.6"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
