--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "develop": "parcel src/index.html"
+    "start": "parcel src/index.html"
   },
   "dependencies": {
     "prop-types": "^15.6.0",
