Add production build script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run compileData && parcel src/index.html",
+    "build": "npm run compileData && parcel build src/index.html",
     "compileData": "node data/compile.js"
   },
   "dependencies": {
