--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tavern-tales",
   "version": "0.0.0",
   "description": "Rules site for the Tavern Tales RPG",
+  "browserslist": ["> 1%", "last 2 versions"],
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
@@ -18,6 +19,7 @@
     "styled-components": "^3.1.6"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "front-matter": "^2.3.0",
